--- a/Style/style.css
+++ b/Style/style.css
@@ -259,8 +259,8 @@ padding: 0px;
     }      
 
     aside > ul {
-
-        font-size: 15px;
+        text-align: center;
+        text-align: justify;
         list-style-type:'\2714\00A0\00A0';
         list-style-position: inside;
         columns: 2;
